--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,14 +7,15 @@ app:
 
 # 数据库配置
 database:
+  enable: true  # 是否启用数据库
   # 主库配置
   master:
     driver: "mysql"
-    host: "localhost"
-    port: 3306
+    host: "192.168.56.104"
+    port: 33060
     username: "root"
     password: "123456"
-    database: "goadmin"
+    database: "testdb"
     charset: "utf8mb4"
     max_idle_conns: 10
     max_open_conns: 100
@@ -34,6 +35,7 @@ database:
 
 # Redis配置
 redis:
+  enable: true  # 是否启用Redis
   host: "localhost"
   port: 6379
   password: ""
