--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MySQL数据库服务
   mysql:
@@ -100,3 +98,5 @@ volumes:
   mysql_data:
     driver: local
   redis_data:
+  backend_logs:
+    driver: local
