--- a/deploy/docker/nginx.conf
+++ b/deploy/docker/nginx.conf
@@ -18,7 +18,7 @@ server {
 
     # API请求代理到后端服务
     location /api/ {
-        proxy_pass http://backend:8080/api/;
+        proxy_pass http://backend:8080/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
