--- a/public/src/package.json
+++ b/public/src/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@element-plus/icons-vue": "^2.3.2",
+    "element-plus": "^2.12.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
