--- a/public/src/package.json
+++ b/public/src/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.2",
     "element-plus": "^2.12.0",
     "vue": "^3.3.4",
     "vue-router": "^4.6.3"
