--- a/public/src/package.json
+++ b/public/src/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.12.0",
     "js-md5": "^0.8.3",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
