--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     build:
       context: ../..
       dockerfile: deploy/docker/backend.Dockerfile
+    image: goadmin_backend:latest   # ← 指定镜像名
     container_name: goadmin-backend
     restart: unless-stopped
     environment:
@@ -57,7 +58,7 @@ services:
       - "8080:8080"
     volumes:
       - ../../config:/app/config:ro
-      - backend_logs:/app/logs
+      - logs:/app/logs
     depends_on:
       mysql:
         condition: service_healthy
@@ -76,6 +77,7 @@ services:
     build:
       context: ../..
       dockerfile: deploy/docker/frontend.Dockerfile
+    image: goadmin_frontend:latest   # ← 指定镜像名
     container_name: goadmin-frontend
     restart: unless-stopped
     ports:
@@ -100,5 +102,9 @@ volumes:
   mysql_data:
     driver: local
   redis_data:
-  backend_logs:
+  logs:
     driver: local
+    driver_opts:
+      type: none
+      device: /data/docker/goadmin/logs
+      o: bind
