--- a/public/src/package.json
+++ b/public/src/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.2",
-    "element-plus": "^2.12.0",
+    "element-plus": "^2.13.1",
     "js-md5": "^0.8.3",
+    "path": "^0.12.7",
+    "pinia": "^3.0.4",
     "vue": "^3.3.4",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3"
