--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,39 @@
-goadmin
-cmd/goadmin
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Dependency directories
+vendor/
+
+# Go workspace file
+go.work
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
 *.log
-.vscode
-build
-.history
-/public/src/node_modules
+
+# Uploads
+uploads/
+
+# Config (if contains sensitive data)
+# config/config.yaml
