--- a/deploy/docker/nginx.conf
+++ b/deploy/docker/nginx.conf
@@ -6,6 +6,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    access_log /app/logs/access.log main;
+    error_log /app/logs/error.log;
+
     # 开启gzip压缩
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
@@ -48,6 +51,12 @@ server {
 
     # 静态资源缓存策略
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+    }
+    # 上传资源
+    location ~* ^/(?:zh|en)?/uploads/(.*)$ {
+        alias /app/uploads/$1;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
