fix: 上传文件访问

--- a/deploy/docker/nginx.conf
+++ b/deploy/docker/nginx.conf
@@ -49,14 +49,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 静态资源缓存策略
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # 上传资源，多语言前缀
+    location ~* ^/(?:zh/|en/)?uploads/ {
+        root /app;                       # 拼接 /app + /uploads/... → /app/uploads/...
+        rewrite ^/(?:zh/|en)?(/uploads/.*)$ $1 break;
+
+        autoindex off;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
-    # 上传资源
-    location ~* ^/(?:zh|en)?/uploads/(.*)$ {
-        alias /app/uploads/$1;
+
+    # 静态资源缓存策略
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
