fix: 上传文件访问

--- a/deploy/docker/nginx.conf
+++ b/deploy/docker/nginx.conf
@@ -52,7 +52,7 @@ server {
     # 上传资源，多语言前缀
     location ~* ^/(?:zh/|en/)?uploads/ {
         root /app;                       # 拼接 /app + /uploads/... → /app/uploads/...
-        rewrite ^/(?:zh/|en)?(/uploads/.*)$ $1 break;
+        rewrite ^/(?:zh|en)?(/uploads/.*)$ $1 break;
 
         autoindex off;
         expires 30d;
